--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://benuchangmai.github.io/185react_yan_hw",
-  "name": "185react_yan",
+  "homepage": "https://chiisalrdytaken.github.io/cs185_2",
+  "name": "185",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
