--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "firebase": "^7.14.3",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
@@ -20,6 +21,7 @@
     "sass": "^1.3.0",
     "simple-react-lightbox": "^2.7.3-2",
     "styled-components": "^5.1.0",
+    "time-stamp": "^2.2.0",
     "typescript": "^3.2.1"
   },
   "scripts": {
