--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "firebase": "^7.14.3",
-    "jquery": "^3.5.0",
-    "popper.js": "^1.16.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-back-to-top-button": "0.0.14",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0",
-    "sass": "^1.3.0",
-    "simple-react-lightbox": "^2.7.3-2",
+    "sass": "^1.26.5",
+    "simple-react-lightbox": "^2.8.0",
     "styled-components": "^5.1.0",
     "time-stamp": "^2.2.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
